build(java): java17 pipeline